1hr model with PCA

--- a/3_modulo/2_entregavel/3_entregavel.ipynb
+++ b/3_modulo/2_entregavel/3_entregavel.ipynb
@@ -399,11 +399,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = dataframe_train.drop(['SalePrice'], axis=1)\n",
+    "X = dataframe_train.drop(['SalePrice','Id'], axis=1)\n",
     "y = dataframe_train['SalePrice']"
    ]
   },
